disregard null paths and long videos + key for video duration

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlnzxa0p+Z8QhRJb27YfhA",
+      "authorship_tag": "ABX9TyNKAAZnhkEmylxDFisT8gh0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -352,7 +352,7 @@
         "            headline = headline_tag.text.strip() if headline_tag else None\n",
         "            return headline\n",
         "        else:\n",
-        "            return (None, None)  # Title container not found\n",
+        "            return None\n",
         "\n",
         "    except requests.exceptions.RequestException as e:\n",
         "        print(f\"Error fetching URL: {e}\")\n",
@@ -373,7 +373,7 @@
         "            subheadline = subheadline_tag.text.strip() if subheadline_tag else None\n",
         "            return subheadline\n",
         "        else:\n",
-        "            return (None, None)\n",
+        "            return None\n",
         "\n",
         "    except requests.exceptions.RequestException as e:\n",
         "        print(f\"Error fetching URL: {e}\")\n",
@@ -470,6 +470,7 @@
         "\n",
         "    return \"No link associated with article found.\"\n",
         "\n",
+        "\n",
         "def download_video(url, output_filename=\"downloaded_video.mp4\", verbose=False):\n",
         "    try:\n",
         "        ydl_opts = {\n",
@@ -482,11 +483,13 @@
         "        with yt_dlp.YoutubeDL(ydl_opts) as ydl:\n",
         "            info_dict = ydl.extract_info(url, download=True)\n",
         "            downloaded_filename = ydl.prepare_filename(info_dict)\n",
+        "            duration = info_dict.get('duration')\n",
+        "\n",
         "\n",
         "        _, ext = os.path.splitext(downloaded_filename)\n",
         "        if ext.lower() == '.mp4':\n",
         "            os.rename(downloaded_filename, output_filename)\n",
-        "            return True, \"Successfully downloaded and renamed to MP4.\"\n",
+        "            return True, \"Successfully downloaded and renamed to MP4.\", duration\n",
         "\n",
         "        command = [\n",
         "            'ffmpeg',\n",
@@ -508,19 +511,19 @@
         "            if verbose:\n",
         "                print(error_message)\n",
         "            os.remove(downloaded_filename)\n",
-        "            return False, error_message\n",
+        "            return False, error_message, None\n",
         "        else:\n",
         "            if verbose:\n",
         "              print(\"FFmpeg conversion successful.\")\n",
         "            os.remove(downloaded_filename)\n",
-        "            return True, \"Successfully downloaded and converted to MP4.\"\n",
+        "            return True, \"Successfully downloaded and converted to MP4.\", duration\n",
         "\n",
         "    except yt_dlp.utils.DownloadError as e:\n",
-        "        return False, f\"yt-dlp download error: {e}\"\n",
+        "        return False, f\"yt-dlp download error: {e}\", None\n",
         "    except FileNotFoundError:\n",
-        "        return False, \"ffmpeg not found.  Please make sure ffmpeg is installed and in your system's PATH.\"\n",
+        "        return False, \"ffmpeg not found.  Please make sure ffmpeg is installed and in your system's PATH.\", None\n",
         "    except Exception as e:\n",
-        "        return False, f\"An unexpected error occurred: {e}\"\n",
+        "        return False, f\"An unexpected error occurred: {e}\", None\n",
         "\n",
         "def download_progress_hook(d):\n",
         "    if d['status'] == 'downloading':\n",
@@ -563,9 +566,10 @@
         "        social_link = get_first_social_link(URL)\n",
         "        destination_path = None\n",
         "        download_success = False\n",
+        "        duration = None\n",
         "\n",
         "        if social_link and social_link != \"No link associated with article found.\":\n",
-        "            download_success, download_message = download_video(social_link)\n",
+        "            download_success, download_message, duration = download_video(social_link)\n",
         "            if download_success and drive_mounted:\n",
         "                destination_path = f'/content/drive/MyDrive/.Research/CLIP/yooyeon-atrey/videos/video_{video_count}'\n",
         "                try:\n",
@@ -573,25 +577,33 @@
         "                    print(f\"Video copied to {destination_path}\")\n",
         "                except Exception as e:\n",
         "                    print(f\"Error copying video: {e}\")\n",
+        "                    destination_path = Non\n",
         "        else:\n",
-        "          download_message = \"No social media link found, skipping download.\"\n",
+        "            download_message = \"No social media link found, skipping download.\"\n",
         "\n",
-        "        video_data = {\n",
-        "            'original_url': URL,\n",
-        "            'headline': headline,\n",
-        "            'subheadline': subheadline,\n",
-        "            'social_platform': social_platform,\n",
-        "            'rating': rating,\n",
-        "            'social_link': social_link,\n",
-        "            'download_success': download_success,\n",
-        "            'download_message': download_message,\n",
-        "            'drive_path': destination_path,\n",
-        "        }\n",
-        "        results.append(video_data)\n",
-        "        video_count += 1\n",
-        "        if download_success:\n",
-        "          delete_video('/content/downloaded_video.mp4')\n",
-        "\n",
+        "        if destination_path is not None and duration is not None and duration <= 600:\n",
+        "            video_data = {\n",
+        "                'original_url': URL,\n",
+        "                'headline': headline,\n",
+        "                'subheadline': subheadline,\n",
+        "                'social_platform': social_platform,\n",
+        "                'rating': rating,\n",
+        "                'social_link': social_link,\n",
+        "                'download_success': download_success,\n",
+        "                'download_message': download_message,\n",
+        "                'drive_path': destination_path,\n",
+        "                'duration': duration,\n",
+        "            }\n",
+        "            results.append(video_data)\n",
+        "            video_count += 1\n",
+        "            if download_success:\n",
+        "                delete_video('/content/downloaded_video.mp4')\n",
+        "        else:\n",
+        "            #Do not add the video data to the results.\n",
+        "            print(f\"Skipping video {video_count} due to invalid path, excessive duration, or download failure.\")\n",
+        "            if download_success:\n",
+        "               delete_video('/content/downloaded_video.mp4')\n",
+        "            video_count += 1 # this will still increment to avoid conflicts\n",
         "\n",
         "    with open(\"video_data.json\", \"w\") as f:\n",
         "        json.dump(results, f, indent=4)\n",
@@ -602,30 +614,7 @@
         "            shutil.copy(\"video_data.json\", \"/content/drive/MyDrive/.Research/CLIP/yooyeon-atrey/videos/\")\n",
         "            print(\"JSON file copied to Google Drive.\")\n",
         "        except Exception as e:\n",
-        "            print(f\"Error copying JSON file to Drive: {e}\")\n",
-        "\n",
-        "# if __name__ == '__main__':\n",
-        "#   video_count=1\n",
-        "#   print(f\"There are {len(all_urls)} videos to be processed.\")\n",
-        "#   for URL in all_urls:\n",
-        "#     print(get_headline(URL))\n",
-        "#     print(get_subheadline(URL))\n",
-        "#     print(_get_social_media_platform(get_first_social_link(URL)))\n",
-        "#     print(get_rating(URL))\n",
-        "#     print(get_first_social_link(URL))\n",
-        "#     download_video(get_first_social_link(URL))\n",
-        "#     destination_path=f'/content/drive/MyDrive/.Research/CLIP/yooyeon-atrey/videos/video_{video_count}'\n",
-        "#     shutil.copy('/content/downloaded_video.mp4', destination_path)\n",
-        "#     video_count += 1\n",
-        "\n",
-        "  # ##################### TESTING ################################################\n",
-        "  # URL = 'https://www.snopes.com/fact-check/escape-from-buckingham-palace/'\n",
-        "  # print(get_headline(URL))\n",
-        "  # print(get_subheadline(URL))\n",
-        "  # print(_get_social_media_platform(get_first_social_link(URL)))\n",
-        "  # print(get_rating(URL))\n",
-        "  # print(get_first_social_link(URL))\n",
-        "  # download_video(get_first_social_link(URL))"
+        "            print(f\"Error copying JSON file to Drive: {e}\")"
       ],
       "metadata": {
         "colab": {
